--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
     		
         		<h1>Hi there, My name is Sherry!</h1>
 				<p>More details to come! <a href="#">Read more about my life...</a></p>
+			<p>What is Git?</p>
+
+<p>Git is a version control system (VSC) that enables you to track what you worked on and what other members of your team are working on. If one or more people are working on the same file, the version control system will warn you that you are about to over-write someone else’s changes. It allows members to collaborate and work together in a more efficient manner.  https://www.youtube.com/watch?v=uUuTYDg9XoI</p>
+
+<p>Who started Git?</p>
+<p>Git was created by Linus Torvalds in 2005 for development of the Linux kernel. https://en.wikipedia.org/wiki/Git</p>
+
+<p>What is Hub?<p>
+<p>A hub connects multiple computers or other network devices together.  It enables teams to collaborate and work together on projects from anywhere.</p>
+
+<p>Describe Repository and its role?</p>
+<p>A repository is used to organize a single project and can contain folders, files, images, videos, spreadsheets, and data sets. https://guides.github.com/activities/hello-world/</p>
+
+<p>Your thoughts about GitHub.</p>
+<p>I have a lot to learn about it.  It seems like an excellent hosting tool to work on projects.</p>
     		
 		
 		<footer>
