--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     		
         		<h1>Hi there, My name is Sherry!</h1>
 				<p>More details to come! <a href="#">Read more about my life...</a></p>
-			<p><b>What is Git?</b></p>
-			<p>Git is a version control system (VSC) that enables you to track what you worked on and what other members of your team are working on. If one or more people are working on the same file, the version control system will warn you that you are about to over-write someone else’s changes. It allows members to collaborate and work together in a more efficient manner.  <cite>https://www.youtube.com/watch?v=uUuTYDg9XoI</cite></p>
+			<p><b>What is Git?</b><br>
+			Git is a version control system (VSC) that enables you to track what you worked on and what other members of your team are working on. If one or more people are working on the same file, the version control system will warn you that you are about to over-write someone else’s changes. It allows members to collaborate and work together in a more efficient manner.  <cite>https://www.youtube.com/watch?v=uUuTYDg9XoI</cite></p>
 
 			<p><b>Who started Git?</b></p>
 			<p>Git was created by Linus Torvalds in 2005 for development of the Linux kernel. https://en.wikipedia.org/wiki/Git</p>
