--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			Git is a version control system (VSC) that enables you to track what you worked on and what other members of your team are working on. If more than one person is working on the same file, the version control system will warn you that you are about to over-write someone else’s changes. It allows members to collaborate and work together in a more efficient manner.  <i>https://www.youtube.com/watch?v=uUuTYDg9XoI</i></p>
 
 			<p><b>Who started Git?</b></br>
-			Git was created by Linus Torvalds in 2005 for development of the Linux kernel. https://en.wikipedia.org/wiki/Git</p>
+			Git was created by Linus Torvalds in 2005 for development of the Linux kernel. <i>https://en.wikipedia.org/wiki/Git</i></p>
 
 			<p><b>What is Hub?</b><br>
 			A hub connects multiple computers or other network devices together.  It enables teams to collaborate and work together on projects from anywhere.</p>
@@ -34,7 +34,8 @@
 
 			<p><b>Your thoughts about GitHub.</b><br>
 			I have a lot to learn about it.  It seems like an excellent hosting tool to work on projects.</p>
-    		
+    			<&nbsp>
+			<&nbsp>
 		
 		<footer>
     		<ul>
