--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 			<p><b>Your thoughts about GitHub.</b><br>
 			I have a lot to learn about it.  It seems like an excellent hosting tool to work on projects.</p>
-    			<&nbsp>
-			<&nbsp>
+    			&nbsp
+			&nbsp
 		
 		<footer>
     		<ul>
